--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link
-      rel="icon"
-      type="image/svg+xml"
-      href="./src/images/favicon-32x32.png"
+      rel="shortcut icon"
+      href="../src/images/favicon-32x32.png"
+      type="image/x-icon"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MilliÖn</title>
